# upack

./: BENCHMARKS.md  Cargo.toml  Justfile  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: lint.yml  test.yml
benches/: compress.rs  decompress.rs  pack.rs  utils.rs
benchmark/: Cargo.toml
benchmark/src/: generate.rs  lib_bitpacking.rs  lib_upack.rs  lib_upack_rng.rs  main.rs  routine.rs  runner.rs
benchmark/src/uint16/: generate.rs  lib_upack.rs  mod.rs  runner.rs
benchmark/src/uint32/: generate.rs  lib_bitpacking.rs  lib_upack.rs  lib_upack_rng.rs  mod.rs  routine.rs  runner.rs
data/: README.md
data/v1-layout/: metadata.json  seeded-287365827356235.upack  seeded-52673285690852452.upack
data/v1-layout-uint16/: metadata.json  seeded-287365827356235.raw  seeded-287365827356235.upack  seeded-52673285690852452.raw  seeded-52673285690852452.upack  seeded-93847569834756.raw  seeded-93847569834756.upack
data/v1-layout-uint32/: metadata.json  seeded-287365827356235.raw  seeded-52673285690852452.raw  seeded-93847569834756.raw  seeded-93847569834756.upack
src/: core.rs  lib.rs  util.rs
src/adaptive/: mod.rs
src/adaptive/uint16/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  util.rs
src/adaptive/uint32/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  util.rs
src/uint16/: mod.rs  test_util.rs
src/uint16/avx2/: data.rs  mod.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  unpack_x128.rs  unpack_x64_full.rs  unpack_x64_partial.rs  util.rs
src/uint16/avx512/: data.rs  mod.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  unpack_x128.rs  unpack_x64_full.rs  unpack_x64_partial.rs  util.rs
src/uint16/neon/: data.rs  mod.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  polyfill.rs  unpack_x128.rs  unpack_x64_full.rs  unpack_x64_partial.rs  util.rs
src/uint16/scalar/: data.rs  mod.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  polyfill.rs  unpack_x128.rs  unpack_x64_full.rs  unpack_x64_partial.rs  util.rs
src/uint32/: mod.rs  test_util.rs
src/uint32/avx2/: data.rs  mod.rs  modifiers.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  unpack_x128.rs  unpack_x64_full.rs  unpack_x64_partial.rs  util.rs  utils.rs
src/uint32/avx512/: data.rs  mod.rs  modifiers.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  unpack_x128.rs  unpack_x64_full.rs  unpack_x64_partial.rs  util.rs  utils.rs
src/uint32/dual_128/: mod.rs
src/uint32/neon/: data.rs  mod.rs  pack_x128.rs  pack_x64_full.rs  pack_x64_partial.rs  util.rs  (+4 more)
tests/: e2e.rs
tools/generate-layout-samples/: Cargo.toml  README.md
tools/generate-layout-samples/src/: main.rs
(+11 files in other folders)
