[package]
name = "upack"
version = "1.0.0"
edition = "2024"

[workspace]
members = [
    "benchmark"
, "tools/generate-layout-samples"]

[dependencies]

[dev-dependencies]
rstest = "0.26"
fastrand = "2"
bytemuck = "1"
serde_json = "1"

serde = { version = "1", features = ["derive"] }

[features]
avx512 = []
avx2 = []
neon = []
default = ["avx512", "avx2", "neon"]
