[package]
name = "upack"
version = "1.0.2"
edition = "2024"
description = "Faster and more flexible SIMD bitpacking compression in pure Rust."
repository = "https://github.com/lnx-search/upack"
rust-version = "1.90.0"
keywords = ["compression", "simd"]
authors = ["chillfish8 harrison.burt@cf8.gg"]
license = "Apache-2.0"
readme = "README.md"
exclude = [
    ".idea",
    ".github",
    "data/*",
]

[workspace]
members = [
    "benchmark",
    "tools/generate-layout-samples",
]

[dependencies]

[dev-dependencies]
rstest = "0.26"
fastrand = "2"
bytemuck = "1"
serde_json = "1"

serde = { version = "1", features = ["derive"] }

[features]
avx512 = []
avx2 = []
neon = []
default = ["avx512", "avx2", "neon"]

[profile.release]
debug = true